Added drop down to GUI for testing

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ fscrape.egg-info/SOURCES.txt
 fscrape/subscribers/__pycache__/__init__.cpython-34.pyc
 fscrape/messages/__pycache__/StandardMessage.cpython-34.pyc
 *.pyc
+*.json
