Added features to fscTab and improved publishers
Updated gitignore to include other test files.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ fscrape/subscribers/__pycache__/__init__.cpython-34.pyc
 fscrape/messages/__pycache__/StandardMessage.cpython-34.pyc
 *.pyc
 *.json
+fscrape/fun.py
