possible fix for setup.py
changed name of package

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ fscrape/messages/__pycache__/StandardMessage.cpython-34.pyc
 *.pyc
 *.json
 fscrape/fun.py
+*.txt
+dist/fscrape-0.0.1-py3.4.egg
+fscrape.egg-info/PKG-INFO
